--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ jwt.secret=${secret}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.testWhileIdle=true
+spring.datasource.timeBetweenEvictionRunsMillis=3600000
+spring.datasource.validationQuery=SELECT 1
